--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+  <div class="qr-image"></div>
   <p class="outfit-bold">Improve your front-end skills by building projects</p>
   <p class="outfit-regular">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level  </p>  
   <div class="attribution">
