--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-  
-    <div class="qr-image"></div>
-    <p class="outfit-bold">Improve your front-end skills by building projects</p>
-    <p class="outfit-regular">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level  </p>  
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Jose Negrete</a>.
-    </div>
+    <main>
+      <div class="qr-image"></div>
+      <p class="outfit-bold">Improve your front-end skills by building projects</p>
+      <p class="outfit-regular">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level  </p>  
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Jose Negrete</a>.
+      </div>
+    </main>
   </body>
 </html>
