--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <main>
       <div class="qr-image"></div>
-      <p class="outfit-bold">Improve your front-end skills by building projects</p>
+      <h1 class="outfit-bold">Improve your front-end skills by building projects</h1>
       <p class="outfit-regular">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level  </p>  
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
