--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <body>
     <main>
       <div class="qr-image"></div>
-      <h1 class="outfit-bold">Improve your front-end skills by building projects</h1>
-      <p class="outfit-regular">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level  </p>  
+      <div class="inner-text">
+        <h1 class="outfit-bold">Improve your front-end skills by building projects</h1>
+        <p class="outfit-regular">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>  
+      </div>
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="#">Jose Negrete</a>.
